# Image-viewer

image-viewer/: .anjuta_sym_db.db  Makefile.am  Makefile.in  configure  configure.ac
image-viewer/.anjuta/session/: anjuta.session  dock-layout.xml
image-viewer/Debug/: Makefile  config.h  config.status  libtool
image-viewer/Debug/po/: Makefile  Makefile.in  POTFILES
image-viewer/Debug/src/: Makefile  image_viewer
image-viewer/Debug/src/.deps/: callbacks.Po  main.Po
image-viewer/autom4te.cache/: output.0  output.1  traces.0  traces.1
image-viewer/src/: Makefile.am  Makefile.in  callbacks.c  callbacks.h  main.c  main.c~
src/: main.c
